@@ -1,3 +1,8 @@
+modCaptcha-1.0.2-beta
+==============================================
+1. Added captcha_key
+
+
 modCaptcha-1.0.1-beta
 ==============================================
 1. Minor session bugfix
